# groth16-zkwasm

./: .gitmodules  Makefile  README.md  inputs.sh  run.sh  verify.c  verify.wasm  vk.h
extractor/: inputgen.ts  package-lock.json  package.json  tsconfig.json  utils.ts  vkgen.ts
extractor/circuit/: a.zkey  proof.json  prove.sh  setup.sh
extractor/circuit/sample/: a.circom
keygen/: Cargo.toml
keygen/src/: main.rs
proof/: input.json  inputs.sh  proof.json
setup/: vk.h  zkey.json
