[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }
num-bigint = { version = "0.4", features = ["rand"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
